--- a/style.css
+++ b/style.css
@@ -111,18 +111,7 @@ img, iframe {
   max-width: 100%;
 }
 
-.profile-picture {
-  width: 200px;
-  position: absolute;
-  top: 0;
-  right: 0;
-  padding: 20px;
-}
 
-.profile-picture {
-  border-radius: 50%;
-  margin-right: 20px; /* Add this line to adjust the margin */
-}
 
 /* Default styles for all sections */
 section {
@@ -195,6 +184,37 @@ section {
       margin: 0 auto;
     }
   }
+
+
+  
+  /* Styles for narrow viewports */
+  @media (max-width: 650px) {
+    .profile-picture {
+        width: 0px;
+        position: absolute;
+        top: 0;
+        right: 0;
+        padding: 20px;
+    
+        border-radius: 50%;
+        margin-right: 20px; /* Add this line to adjust the margin */
+      }
+  }
+  
+  /* Styles for wider viewports */
+  @media (min-width: 651px) {
+    .profile-picture {
+        width: 200px;
+        position: absolute;
+        top: 0;
+        right: 0;
+        padding: 20px;
+    
+        border-radius: 50%;
+        margin-right: 20px; /* Add this line to adjust the margin */
+      }
+  }
+
 
   /* Styles for the horizontal bar */
 .horizontal-bar {
