--- a/style.css
+++ b/style.css
@@ -238,3 +238,27 @@ section {
 .horizontal-bar a:hover {
   color: #0077b6;
 }
+
+
+.iframe-container {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%; /* 16:9 aspect ratio */
+}
+
+.iframe-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+@media (max-width: 700px) {
+    .iframe-container {
+      width: 0;
+      height: 0;
+    }
+}
+
+
