--- a/new_style.css
+++ b/new_style.css
@@ -44,7 +44,11 @@ a:hover::after {
 
 /* Header */
 header {
-    background: linear-gradient(135deg, #4a90e2, #d0021b); /* Less saturated blue and red tones */
+    background: linear-gradient(
+        135deg,
+        #4a90e2,
+        #d0021b
+    ); /* Less saturated blue and red tones */
     color: #fff;
     padding: 20px;
     text-align: center;
